Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 180,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:09:22.109741Z",
-     "start_time": "2019-04-10T10:09:22.078977Z"
+     "end_time": "2019-04-10T10:11:34.064754Z",
+     "start_time": "2019-04-10T10:11:34.043427Z"
     },
     "code_folding": [
      31,
@@ -179,9 +179,9 @@
     "    def __init__(self,inc,outc,act=tf_arctan,d_act=d_tf_arctan):\n",
     "        \n",
     "        if outc == 1:\n",
-    "            self.w = self.norm(tf.Variable(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
+    "            self.w = tf.Variable(self.norm(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
     "        else:\n",
-    "            self.w = tf.Variable(self.sym_decorrelation(tf.random_normal([inc,outc],stddev=0.05,seed=2)))\n",
+    "            self.w = tf.Variable(self.sym_decorrelation(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
     "        self.a = tf.Variable(tf.ones([outc]))\n",
     "        self.b = tf.Variable(tf.ones([outc]))\n",
     "        self.c = tf.Variable(tf.zeros([outc]))\n",
@@ -231,17 +231,17 @@
     "    def sym_decorrelation(self,W):\n",
     "        s, u = tf.linalg.eigh(W@tf.transpose(W))\n",
     "        #        (u * (1./(np.sqrt(s+1e-8)+1e-8))) @ u.T @ W\n",
-    "        result = (u * (1./(tf.sqrt(s+1e-2)+1e-2))) @ tf.transpose(u) @ W\n",
+    "        result = (u * (1./(tf.sqrt(s+1e-5)+1e-5))) @ tf.transpose(u) @ W\n",
     "        return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 181,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:09:23.853759Z",
-     "start_time": "2019-04-10T10:09:22.362484Z"
+     "end_time": "2019-04-10T10:11:37.167237Z",
+     "start_time": "2019-04-10T10:11:34.434442Z"
     }
    },
    "outputs": [],
@@ -255,28 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 182,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:09:23.935986Z",
-     "start_time": "2019-04-10T10:09:23.927057Z"
+     "end_time": "2019-04-10T10:11:37.231772Z",
+     "start_time": "2019-04-10T10:11:37.225324Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.977, -0.   , -0.   , ...,  0.001, -0.001, -0.   ],\n",
-       "       [-0.   ,  0.977, -0.   , ...,  0.001, -0.001, -0.001],\n",
-       "       [-0.   , -0.   ,  0.976, ...,  0.   , -0.   , -0.001],\n",
+       "array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
-       "       [ 0.001,  0.001,  0.   , ...,  0.976, -0.001,  0.001],\n",
-       "       [-0.001, -0.001, -0.   , ..., -0.001,  0.975, -0.   ],\n",
-       "       [-0.   , -0.001, -0.001, ...,  0.001, -0.   ,  0.976]],\n",
-       "      dtype=float32)"
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]], dtype=float32)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,29 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:08:40.539707Z",
-     "start_time": "2019-04-10T10:08:40.445986Z"
+     "start_time": "2019-04-10T10:11:35.856Z"
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0. -0. ... -0. -0.  0.]\n",
-      " [ 0.  1.  0. ...  0. -0. -0.]\n",
-      " [-0.  0.  1. ... -0. -0. -0.]\n",
-      " ...\n",
-      " [-0.  0. -0. ...  1.  0.  0.]\n",
-      " [-0. -0. -0. ...  0.  1.  0.]\n",
-      " [ 0. -0. -0. ...  0.  0.  1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ss  =np.random.randn(784,256)\n",
     "def _sym_decorrelation(W):\n",
@@ -331,10 +315,12 @@
     "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
-    "    return (u * (1./(np.sqrt(s+1e-8)+1e-8))) @ u.T @ W\n",
+    "    return (u * (1./(np.sqrt(s+1e-5)+1e-5))) @ u.T @ W\n",
     "\n",
     "sss = _sym_decorrelation(ss)\n",
-    "print(sss.T@sss)"
+    "sssss = layer1.sym_decorrelation(ss).eval()\n",
+    "print(sss.T@sss)\n",
+    "print(sssss.T@sssss)"
    ]
   },
   {
