Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 196,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:11:34.064754Z",
-     "start_time": "2019-04-10T10:11:34.043427Z"
+     "end_time": "2019-04-10T10:13:02.966001Z",
+     "start_time": "2019-04-10T10:13:02.941707Z"
     },
     "code_folding": [
      31,
@@ -181,7 +181,7 @@
     "        if outc == 1:\n",
     "            self.w = tf.Variable(self.norm(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
     "        else:\n",
-    "            self.w = tf.Variable(self.sym_decorrelation(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
+    "            self.w = tf.Variable(tf.random_normal([inc,outc],stddev=0.05,seed=2))\n",
     "        self.a = tf.Variable(tf.ones([outc]))\n",
     "        self.b = tf.Variable(tf.ones([outc]))\n",
     "        self.c = tf.Variable(tf.zeros([outc]))\n",
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 197,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:11:37.167237Z",
-     "start_time": "2019-04-10T10:11:34.434442Z"
+     "end_time": "2019-04-10T10:13:09.021981Z",
+     "start_time": "2019-04-10T10:13:06.171162Z"
     }
    },
    "outputs": [],
@@ -255,27 +255,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 198,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:11:37.231772Z",
-     "start_time": "2019-04-10T10:11:37.225324Z"
+     "end_time": "2019-04-10T10:13:09.092413Z",
+     "start_time": "2019-04-10T10:13:09.080511Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "array([[ 2.08 , -0.023,  0.021, ...,  0.061,  0.004, -0.112],\n",
+       "       [-0.023,  2.031,  0.019, ...,  0.099, -0.024, -0.088],\n",
+       "       [ 0.021,  0.019,  1.912, ...,  0.026, -0.016, -0.097],\n",
        "       ...,\n",
-       "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]], dtype=float32)"
+       "       [ 0.061,  0.099,  0.026, ...,  1.896, -0.026,  0.059],\n",
+       "       [ 0.004, -0.024, -0.016, ..., -0.026,  1.917,  0.012],\n",
+       "       [-0.112, -0.088, -0.097, ...,  0.059,  0.012,  1.843]],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,26 +287,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:00:50.408466Z",
-     "start_time": "2019-04-10T10:00:50.402973Z"
+     "end_time": "2019-04-10T10:13:09.161357Z",
+     "start_time": "2019-04-10T10:13:09.155405Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.043, -0.01 ,  0.007, ...,  0.031, -0.004, -0.03 ],\n",
+       "       [ 0.057,  0.002, -0.011, ...,  0.097, -0.01 ,  0.009],\n",
+       "       [ 0.037,  0.054,  0.052, ...,  0.063, -0.045,  0.075],\n",
+       "       ...,\n",
+       "       [-0.056,  0.027,  0.04 , ...,  0.026,  0.043, -0.049],\n",
+       "       [-0.07 , -0.003, -0.052, ..., -0.048,  0.01 , -0.075],\n",
+       "       [ 0.032,  0.104,  0.084, ...,  0.024, -0.014, -0.087]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "te"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T10:11:35.856Z"
+     "end_time": "2019-04-10T10:13:27.263042Z",
+     "start_time": "2019-04-10T10:13:26.516084Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0. -0. ... -0.  0. -0.]\n",
+      " [ 0.  1.  0. ... -0.  0. -0.]\n",
+      " [-0.  0.  1. ... -0.  0.  0.]\n",
+      " ...\n",
+      " [-0. -0. -0. ...  1.  0. -0.]\n",
+      " [ 0.  0.  0. ...  0.  1. -0.]\n",
+      " [-0. -0.  0. ... -0. -0.  1.]]\n",
+      "[[ 1.  0. -0. ...  0. -0.  0.]\n",
+      " [ 0.  1.  0. ... -0. -0. -0.]\n",
+      " [-0.  0.  1. ...  0. -0. -0.]\n",
+      " ...\n",
+      " [ 0. -0.  0. ...  1.  0.  0.]\n",
+      " [-0. -0. -0. ...  0.  1. -0.]\n",
+      " [ 0. -0. -0. ...  0. -0.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "ss  =np.random.randn(784,256)\n",
     "def _sym_decorrelation(W):\n",
@@ -317,18 +360,42 @@
     "    # the eigenvalues) of W * W.T\n",
     "    return (u * (1./(np.sqrt(s+1e-5)+1e-5))) @ u.T @ W\n",
     "\n",
-    "sss = _sym_decorrelation(ss)\n",
-    "sssss = layer1.sym_decorrelation(ss).eval()\n",
+    "sss = _sym_decorrelation(te)\n",
+    "sssss = layer1.sym_decorrelation(te).eval()\n",
     "print(sss.T@sss)\n",
     "print(sssss.T@sssss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 184,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T10:11:52.719892Z",
+     "start_time": "2019-04-10T10:11:52.713939Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.577, -0.312, -0.443, ..., -1.426, -0.966, -1.478],\n",
+       "       [-0.427, -0.168,  2.35 , ..., -2.   , -1.397, -0.426],\n",
+       "       [-0.747, -1.449, -0.905, ...,  0.102, -0.432,  0.307],\n",
+       "       ...,\n",
+       "       [ 0.874,  3.734,  0.054, ...,  0.445,  1.5  ,  0.948],\n",
+       "       [ 0.42 , -1.197, -0.118, ..., -0.129, -1.749,  1.076],\n",
+       "       [ 1.201, -1.433, -1.776, ..., -0.293,  1.725, -0.487]])"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss"
+   ]
   },
   {
    "cell_type": "code",
