Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 202,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:13:02.966001Z",
-     "start_time": "2019-04-10T10:13:02.941707Z"
+     "end_time": "2019-04-10T10:13:52.387697Z",
+     "start_time": "2019-04-10T10:13:52.367360Z"
     },
     "code_folding": [
      31,
@@ -179,9 +179,9 @@
     "    def __init__(self,inc,outc,act=tf_arctan,d_act=d_tf_arctan):\n",
     "        \n",
     "        if outc == 1:\n",
-    "            self.w = tf.Variable(self.norm(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
+    "            self.w = tf.Variable(self.norm(tf.random_normal([inc,outc],stddev=0.05,seed=2)))\n",
     "        else:\n",
-    "            self.w = tf.Variable(tf.random_normal([inc,outc],stddev=0.05,seed=2))\n",
+    "            self.w = tf.Variable(self.sym_decorrelation(tf.random_normal([inc,outc],stddev=0.05,seed=2)))\n",
     "        self.a = tf.Variable(tf.ones([outc]))\n",
     "        self.b = tf.Variable(tf.ones([outc]))\n",
     "        self.c = tf.Variable(tf.zeros([outc]))\n",
@@ -230,18 +230,17 @@
     "    \n",
     "    def sym_decorrelation(self,W):\n",
     "        s, u = tf.linalg.eigh(W@tf.transpose(W))\n",
-    "        #        (u * (1./(np.sqrt(s+1e-8)+1e-8))) @ u.T @ W\n",
     "        result = (u * (1./(tf.sqrt(s+1e-5)+1e-5))) @ tf.transpose(u) @ W\n",
     "        return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 203,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:13:09.021981Z",
-     "start_time": "2019-04-10T10:13:06.171162Z"
+     "end_time": "2019-04-10T10:13:57.257056Z",
+     "start_time": "2019-04-10T10:13:53.715291Z"
     }
    },
    "outputs": [],
@@ -255,28 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 204,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:13:09.092413Z",
-     "start_time": "2019-04-10T10:13:09.080511Z"
+     "end_time": "2019-04-10T10:13:57.319055Z",
+     "start_time": "2019-04-10T10:13:57.313103Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.08 , -0.023,  0.021, ...,  0.061,  0.004, -0.112],\n",
-       "       [-0.023,  2.031,  0.019, ...,  0.099, -0.024, -0.088],\n",
-       "       [ 0.021,  0.019,  1.912, ...,  0.026, -0.016, -0.097],\n",
+       "array([[ 1.,  0.,  0., ..., -0.,  0., -0.],\n",
+       "       [ 0.,  1.,  0., ...,  0., -0., -0.],\n",
+       "       [ 0.,  0.,  1., ..., -0.,  0., -0.],\n",
        "       ...,\n",
-       "       [ 0.061,  0.099,  0.026, ...,  1.896, -0.026,  0.059],\n",
-       "       [ 0.004, -0.024, -0.016, ..., -0.026,  1.917,  0.012],\n",
-       "       [-0.112, -0.088, -0.097, ...,  0.059,  0.012,  1.843]],\n",
-       "      dtype=float32)"
+       "       [-0.,  0., -0., ...,  1.,  0., -0.],\n",
+       "       [ 0., -0.,  0., ...,  0.,  1., -0.],\n",
+       "       [-0., -0., -0., ..., -0., -0.,  1.]], dtype=float32)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
