Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -160,8 +160,6 @@
      "start_time": "2019-04-10T10:13:52.367360Z"
     },
     "code_folding": [
-     31,
-     34,
      56,
      60
     ],
@@ -201,6 +199,7 @@
     "        return self.layerA\n",
     "    \n",
     "    def backprop_first(self):\n",
+    "        grad = -2*layer1a.T @ layer1a @ w2 \n",
     "        pass \n",
     "\n",
     "    def backprop(self,gradient=None,which_reg=0):\n",
