--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 209,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:13:52.387697Z",
-     "start_time": "2019-04-10T10:13:52.367360Z"
+     "end_time": "2019-04-10T11:25:37.326962Z",
+     "start_time": "2019-04-10T11:25:37.306638Z"
     },
     "code_folding": [
      56,
@@ -199,8 +199,8 @@
     "        return self.layerA\n",
     "    \n",
     "    def backprop_first(self):\n",
-    "        grad = -2*layer1a.T @ layer1a @ w2 \n",
-    "        pass \n",
+    "        grad = -2* tf.transpose(self.input) @ self.input @ self.w\n",
+    "        return grad\n",
     "\n",
     "    def backprop(self,gradient=None,which_reg=0):\n",
     "        grad_part_1 = gradient\n",
@@ -236,20 +236,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 208,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:13:57.257056Z",
-     "start_time": "2019-04-10T10:13:53.715291Z"
+     "end_time": "2019-04-10T11:25:17.786013Z",
+     "start_time": "2019-04-10T11:25:13.645455Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'layer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-208-ddb3bbe61964>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mlayer1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeedforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mgrad1\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackprop_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-206-c9d78a11338a>\u001b[0m in \u001b[0;36mbackprop_first\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mbackprop_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m         \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mlayer\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'layer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "temp = np.ones((10,784)).astype(np.float32)\n",
     "               \n",
-    "layer1 = PCA_Layer(784,256)\n",
+    "l1 = PCA_Layer(784,256)\n",
     "sess.run(tf.global_variables_initializer())\n",
-    "te = layer1.w.eval()\n"
+    "\n",
+    "layer1 = l1.feedforward(temp)\n",
+    "grad1  = l1.backprop_first()\n",
+    "print(grad1.shape)\n"
    ]
   },
   {
