Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -191,8 +191,8 @@
     "        grad = -2* tf.transpose(self.input) @ self.input @ self.w\n",
     "        \n",
     "        update_w = []\n",
-    "        update_w.append(tf.assign( self.m,self.m*beta1 + (1-beta1) * (grad)   ))\n",
-    "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad ** 2)   ))\n",
+    "        update_w.append(tf.assign( self.mw,self.mw*beta1 + (1-beta1) * (grad)   ))\n",
+    "        update_w.append(tf.assign( self.vw,self.vw*beta2 + (1-beta2) * (grad ** 2)   ))\n",
     "        m_hat = self.m / (1-beta1)\n",
     "        v_hat = self.v / (1-beta2)\n",
     "        adam_middle = m_hat *  learning_rate/(tf.sqrt(v_hat) + adam_e)\n",
@@ -250,6 +250,7 @@
     }
    ],
    "source": [
+    "beta1,beta2,adam_e = 0\n",
     "temp = np.ones((10,784)).astype(np.float32)\n",
     "               \n",
     "l1 = PCA_Layer(784,256)\n",
