Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -142,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T11:26:11.698678Z",
-     "start_time": "2019-04-10T11:26:11.680823Z"
+     "end_time": "2019-04-10T11:29:23.731938Z",
+     "start_time": "2019-04-10T11:29:23.707597Z"
     },
     "code_folding": [
      56,
@@ -189,16 +189,17 @@
     "    \n",
     "    def backprop_first(self):\n",
     "        grad = -2* tf.transpose(self.input) @ self.input @ self.w\n",
+    "        grad_pass = -2*self.input@self.w@tf.transpose(self.w)\n",
     "        \n",
     "        update_w = []\n",
     "        update_w.append(tf.assign( self.mw,self.mw*beta1 + (1-beta1) * (grad)   ))\n",
     "        update_w.append(tf.assign( self.vw,self.vw*beta2 + (1-beta2) * (grad ** 2)   ))\n",
-    "        m_hat = self.m / (1-beta1)\n",
-    "        v_hat = self.v / (1-beta2)\n",
-    "        adam_middle = m_hat *  learning_rate/(tf.sqrt(v_hat) + adam_e)\n",
+    "        m_hatw = self.mw / (1-beta1)\n",
+    "        v_hatw = self.vw / (1-beta2)\n",
+    "        adam_middle = m_hatw *  learning_rate/(tf.sqrt(v_hatw) + adam_e)\n",
     "        update_w.append(tf.assign(self.w,tf.subtract(self.w,adam_middle )))\n",
     "        \n",
-    "        return grad\n",
+    "        return grad_pass,update_w\n",
     "\n",
     "    def backprop(self,gradient=None,which_reg=0):\n",
     "        grad_part_1 = gradient\n",
@@ -233,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T11:26:15.261545Z",
-     "start_time": "2019-04-10T11:26:14.223388Z"
+     "end_time": "2019-04-10T11:29:26.801393Z",
+     "start_time": "2019-04-10T11:29:23.904478Z"
     }
    },
    "outputs": [
@@ -245,20 +246,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(784, 256)\n"
+      "(10, 784)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-61d128662562>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mgrad1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad1_update\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackprop_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad1_update\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
      ]
     }
    ],
    "source": [
-    "beta1,beta2,adam_e = 0\n",
+    "beta1,beta2,adam_e = 0.9,0.999,1e-8\n",
+    "learning_rate = 0.000008\n",
     "temp = np.ones((10,784)).astype(np.float32)\n",
     "               \n",
     "l1 = PCA_Layer(784,256)\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
     "layer1 = l1.feedforward(temp)\n",
-    "grad1  = l1.backprop_first()\n",
-    "print(grad1.shape)\n"
+    "grad1,grad1_update  = l1.backprop_first()\n",
+    "print(grad1.shape)\n",
+    "print(grad1_update.shape)\n"
    ]
   },
   {
