--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -234,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T11:29:26.801393Z",
-     "start_time": "2019-04-10T11:29:23.904478Z"
+     "end_time": "2019-04-10T11:29:44.899071Z",
+     "start_time": "2019-04-10T11:29:41.559743Z"
     }
    },
    "outputs": [
@@ -246,18 +246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 784)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-61d128662562>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mgrad1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad1_update\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackprop_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad1_update\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+      "(10, 784)\n",
+      "(784, 256)\n"
      ]
     }
    ],
@@ -272,7 +262,7 @@
     "layer1 = l1.feedforward(temp)\n",
     "grad1,grad1_update  = l1.backprop_first()\n",
     "print(grad1.shape)\n",
-    "print(grad1_update.shape)\n"
+    "print(grad1_update[2].shape)\n"
    ]
   },
   {
