Super important commit

--- a/sandbox full of trash/PCA via gradient 2/0 LA.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/0 LA.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T22:16:28.118122Z",
+     "start_time": "2019-04-10T22:16:28.113687Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([[1,2]])\n",
+    "print(vector.shape)"
+   ]
   },
   {
    "cell_type": "code",
