Super important commit

--- a/sandbox full of trash/PCA via gradient 2/0 LA.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/0 LA.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T22:16:28.118122Z",
-     "start_time": "2019-04-10T22:16:28.113687Z"
+     "end_time": "2019-04-10T22:22:59.872557Z",
+     "start_time": "2019-04-10T22:22:59.867596Z"
     }
    },
    "outputs": [
@@ -30,13 +30,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2)\n"
+      "(1, 2)\n",
+      "[[2 4]]\n",
+      "[[2 4]]\n"
      ]
     }
    ],
    "source": [
     "vector = np.array([[1,2]])\n",
-    "print(vector.shape)"
+    "print(vector.shape)\n",
+    "print(vector*2)\n",
+    "print(vector+vector)"
    ]
   },
   {
