Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -142,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T11:29:23.731938Z",
-     "start_time": "2019-04-10T11:29:23.707597Z"
+     "end_time": "2019-04-10T22:30:31.115782Z",
+     "start_time": "2019-04-10T22:30:31.057719Z"
     },
     "code_folding": [
      56,
@@ -181,13 +181,18 @@
     "        \n",
     "        self.act,self.d_act = act,d_act\n",
     "\n",
-    "    def feedforward(self,input=None):\n",
+    "    def feedforward_nonlinear(self,input=None):\n",
     "        self.input  = input\n",
     "        self.layer  = tf.matmul(self.input,self.w) \n",
     "        self.layerA = self.a*self.act(self.b*self.layer) + self.c\n",
     "        return self.layerA\n",
     "    \n",
-    "    def backprop_first(self):\n",
+    "    def feedforward_linear(self,input=None):\n",
+    "        self.input  = input\n",
+    "        self.layer  = tf.matmul(self.input,self.w) \n",
+    "        return self.layer\n",
+    "    \n",
+    "    def backprop_linear(self):\n",
     "        grad = -2* tf.transpose(self.input) @ self.input @ self.w\n",
     "        grad_pass = -2*self.input@self.w@tf.transpose(self.w)\n",
     "        \n",
