Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -142,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T22:39:10.440446Z",
-     "start_time": "2019-04-10T22:39:10.410635Z"
+     "end_time": "2019-04-10T22:39:25.618255Z",
+     "start_time": "2019-04-10T22:39:25.588977Z"
     },
     "code_folding": [
      31,
@@ -277,8 +277,9 @@
     "\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "layer1 = l1.feedforward(temp)\n",
-    "grad1,grad1_update  = l1.backprop_first()\n",
+    "layer1 = l1.feedforward_nonlinear(temp)\n",
+    "layer2 = l2.feedforward_linear(layer1)\n",
+    "\n",
     "print(grad1.shape)\n",
     "print(grad1_update[2].shape)\n"
    ]
