Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -250,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T11:29:44.899071Z",
-     "start_time": "2019-04-10T11:29:41.559743Z"
+     "end_time": "2019-04-10T22:39:49.764522Z",
+     "start_time": "2019-04-10T22:39:44.854615Z"
     }
    },
    "outputs": [
@@ -262,14 +262,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 784)\n",
-      "(784, 256)\n"
+      "Tensor(\"MatMul_47:0\", shape=(10, 128), dtype=float32)\n"
      ]
     }
    ],
    "source": [
-    "beta1,beta2,adam_e = 0.9,0.999,1e-8\n",
     "learning_rate = 0.000008\n",
+    "beta1,beta2,adam_e = 0.9,0.999,1e-8\n",
+    "\n",
     "temp = np.ones((10,784)).astype(np.float32)\n",
     "               \n",
     "l1 = PCA_Layer(784,256)\n",
@@ -280,8 +280,7 @@
     "layer1 = l1.feedforward_nonlinear(temp)\n",
     "layer2 = l2.feedforward_linear(layer1)\n",
     "\n",
-    "print(grad1.shape)\n",
-    "print(grad1_update[2].shape)\n"
+    "print(layer2)\n"
    ]
   },
   {
