--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -249,20 +249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T22:47:08.704695Z",
-     "start_time": "2019-04-10T22:47:01.993903Z"
+     "end_time": "2019-04-10T22:47:29.977655Z",
+     "start_time": "2019-04-10T22:47:22.164253Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"MatMul_82:0\", shape=(10, 128), dtype=float32)\n",
-      "(<tf.Tensor 'matmul_71:0' shape=(10, 256) dtype=float32>, [<tf.Tensor 'Assign_11:0' shape=(256, 128) dtype=float32_ref>, <tf.Tensor 'Assign_12:0' shape=(256, 128) dtype=float32_ref>, <tf.Tensor 'Assign_13:0' shape=(256, 128) dtype=float32_ref>])\n"
+     "ename": "NameError",
+     "evalue": "name 'grad1a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-36345a0913d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mgrad2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad2_update\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0ml2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackprop_linear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mgrad1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad1_update\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackprop_nonlinear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-20-a7f41e65b2fc>\u001b[0m in \u001b[0;36mbackprop_nonlinear\u001b[1;34m(self, gradient)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mgrada\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgradient\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayerA\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m         \u001b[0mgradb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrad1a\u001b[0m   \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md_act\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m         \u001b[0mgradc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'grad1a' is not defined"
      ]
     }
    ],
@@ -285,6 +289,7 @@
     "\n",
     "print(layer2)\n",
     "print(grad2)\n",
+    "print(grad1)\n",
     "\n"
    ]
   },
