--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -210,7 +210,7 @@
     "    def backprop_nonlinear(self,gradient):\n",
     "        \n",
     "        grada = gradient * (self.layerA - self.c)/self.a\n",
-    "        gradb = grad1a   * self.a * self.d_act(self.b*self.layer) * self.layer\n",
+    "        gradb = gradient * self.a * self.d_act(self.b*self.layer) * self.layer\n",
     "        gradc = gradient\n",
     "        \n",
     "        gradw = tf.transpose(self.input) @ grad1a   * self.a * self.d_act(self.b*self.layer) * self.b - 2 * tf.transpose(self.input) @ self.input @ self.w\n",
