Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -142,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T22:53:20.465060Z",
-     "start_time": "2019-04-10T22:53:20.440252Z"
+     "end_time": "2019-04-10T22:55:53.537892Z",
+     "start_time": "2019-04-10T22:55:53.509099Z"
     },
     "code_folding": [
      25,
@@ -235,7 +235,9 @@
     "        return grad_pass,update_w\n",
     "    \n",
     "    def stand(self,w):\n",
-    "        return (w-)\n",
+    "        mean,variance = tf.nn.moments(w)\n",
+    "        return (w-mean)/variance\n",
+    "    \n",
     "    def norm(self,W):\n",
     "        W = W/(tf.sqrt(tf.reduce_sum(W**2)+1e-8))\n",
     "        return W\n",
