--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -306,6 +306,12 @@
     }
    ],
    "source": [
+    "# create layers \n",
+    "l1 = PCA_Layer(784,128)\n",
+    "l2 = PCA_Layer(128,128)\n",
+    "l3 = PCA_Layer(128,64)\n",
+    "l3 = PCA_Layer(128,64)\n",
+    "\n",
     "learning_rate = 0.000008\n",
     "beta1,beta2,adam_e = 0.9,0.999,1e-8\n",
     "\n",
