Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -281,10 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T23:04:37.604Z"
+     "end_time": "2019-04-10T23:04:38.543593Z",
+     "start_time": "2019-04-10T23:04:37.606923Z"
     }
    },
    "outputs": [],
@@ -319,7 +320,16 @@
    },
    "outputs": [],
    "source": [
-    "sess.run(tf.global_variables_initializer())\n"
+    "# start\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "val_data_copy = np.copy(val_data)\n",
+    "\n",
+    "for iter in range(100):\n",
+    "    \n",
+    "    val_data_copy  = shuffle(val_data_copy)\n",
+    "    for current_batch_index in range(0,len(val_data_copy),mini_batch_size):\n",
+    "        print(current_batch_index)\n",
+    "\n"
    ]
   },
   {
