--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -126,20 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:04:30.575164Z",
-     "start_time": "2019-04-10T23:04:30.537573Z"
+     "end_time": "2019-04-10T23:07:35.364085Z",
+     "start_time": "2019-04-10T23:07:35.318944Z"
     },
     "code_folding": [
      8,
-     29,
-     43,
-     48,
-     88,
-     91,
-     94
+     30,
+     49,
+     89,
+     92,
+     95
     ],
     "scrolled": false
    },
@@ -193,7 +192,8 @@
     "        self.input  = input\n",
     "        self.layer  = tf.matmul(self.input,self.w) \n",
     "        self.layerA = self.a*self.act(self.b*self.layer) + self.c\n",
-    "        return self.layerA\n",
+    "        loss = self.w @ tf.transpose(self.input) @ self.input @ self.w\n",
+    "        return self.layerA,loss\n",
     "    def backprop_nonlinear(self,gradient):\n",
     "        \n",
     "        grada = tf.reduce_mean(gradient * self.act(self.b*self.layer),0)\n",
@@ -282,7 +282,7 @@
     "\n",
     "x = tf.placeholder(tf.float32,[mini_batch_size,784])\n",
     "\n",
-    "layer1 = l1.feedforward_nonlinear(x)\n",
+    "layer1,l1l = l1.feedforward_nonlinear(x)\n",
     "layer2 = l2.feedforward_nonlinear(layer1)\n",
     "layer3 = l3.feedforward_nonlinear(layer2)\n",
     "layer4 = l4.feedforward_linear(layer3)\n",
