Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -265,11 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:04:38.543593Z",
-     "start_time": "2019-04-10T23:04:37.606923Z"
+     "start_time": "2019-04-10T23:08:15.250Z"
     }
    },
    "outputs": [],
@@ -283,9 +282,11 @@
     "x = tf.placeholder(tf.float32,[mini_batch_size,784])\n",
     "\n",
     "layer1,l1l = l1.feedforward_nonlinear(x)\n",
-    "layer2 = l2.feedforward_nonlinear(layer1)\n",
-    "layer3 = l3.feedforward_nonlinear(layer2)\n",
-    "layer4 = l4.feedforward_linear(layer3)\n",
+    "layer2,l2l = l2.feedforward_nonlinear(layer1)\n",
+    "layer3,l3l = l3.feedforward_nonlinear(layer2)\n",
+    "layer4,l4l = l4.feedforward_linear(layer3)\n",
+    "\n",
+    "loss = tf.reduce_mean(l1l) + tf.reduce_mean(l2l) + tf.reduce_mean(l3l) + tf.reduce_mean(l4l)\n",
     "\n",
     "grad4,grad4_update = l4.backprop_linear()\n",
     "grad3,grad3_update = l3.backprop_nonlinear(grad4)\n",
