--- a/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
@@ -292,7 +292,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T23:23:24.881Z"
+     "start_time": "2019-04-10T23:23:54.244Z"
     },
     "scrolled": false
    },
@@ -301,47 +301,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 784)\n",
-      "0.2364421\n",
-      "(10, 784)\n",
-      "0.006803033\n",
-      "(10, 784)\n",
-      "0.27120727\n",
-      "(10, 784)\n",
-      "1614.2952\n",
-      "(10, 784)\n",
-      "0.2617635\n",
-      "(10, 784)\n",
-      "2010.9285\n",
-      "(10, 784)\n",
-      "0.26774594\n",
-      "(10, 784)\n",
-      "1958.0199\n",
-      "(10, 784)\n",
-      "0.26708227\n",
-      "(10, 784)\n",
-      "1765.0752\n",
-      "(10, 784)\n",
-      "0.26132497\n",
-      "(10, 784)\n",
-      "1931.7452\n",
-      "(10, 784)\n",
-      "0.27244067\n",
-      "(10, 784)\n",
-      "3677.684\n",
-      "(10, 784)\n",
-      "0.2643684\n",
-      "(10, 784)\n",
-      "1892.4338\n",
-      "(10, 784)\n",
-      "0.26771358\n",
-      "(10, 784)\n",
-      "1635.941\n",
-      "(10, 784)\n",
-      "0.26716337\n",
-      "(10, 784)\n",
-      "1554.8434\n",
-      "(10, 784)\n"
+      "Iter:  0  var:  0.7808926\n",
+      "Iter:  0  var:  0.0088649\n",
+      "Iter:  0  var:  0.04537859\n",
+      "Iter:  0  var:  11562.467\n",
+      "Iter:  0  var:  0.043931857\n"
      ]
     }
    ],
@@ -357,9 +321,8 @@
     "    for current_batch_index in range(0,len(val_data_copy),mini_batch_size):\n",
     "        \n",
     "        current_batch  = val_data_copy[current_batch_index:current_batch_index+mini_batch_size]\n",
-    "        print(current_batch.shape)\n",
     "        sess_result    = sess.run([loss,grad_update],feed_dict={x:current_batch})\n",
-    "        print(sess_result[0])\n",
+    "        print('Iter: ',iter,\" var: \",sess_result[0])\n",
     "\n"
    ]
   },
