Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
@@ -370,7 +370,20 @@
       "Iter:  0  var:  0.017385282\n",
       "Iter:  0  var:  7642.949\n",
       "Iter:  0  var:  0.018362805\n",
-      "Iter:  0  var:  7827.8115\n"
+      "Iter:  0  var:  7827.8115\n",
+      "Iter:  0  var:  0.019161837\n",
+      "Iter:  0  var:  6418.9307\n",
+      "Iter:  0  var:  0.015946835\n",
+      "Iter:  0  var:  7703.7036\n",
+      "Iter:  0  var:  0.017202828\n",
+      "Iter:  0  var:  7271.024\n",
+      "Iter:  0  var:  0.019420404\n",
+      "Iter:  0  var:  6802.9043\n",
+      "Iter:  0  var:  0.019643119\n",
+      "Iter:  0  var:  5633.416\n",
+      "Iter:  0  var:  0.022890653\n",
+      "Iter:  0  var:  5662.562\n",
+      "Iter:  0  var:  0.02500469\n"
      ]
     }
    ],
@@ -387,7 +400,7 @@
     "        \n",
     "        current_batch  = val_data_copy[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        sess_result    = sess.run([loss,grad_update],feed_dict={x:current_batch})\n",
-    "        print('Iter: ',iter,' current batch: ',,\" var: \",sess_result[0])\n",
+    "        print('Iter: ',iter,' current batch: ',current_batch_index,\"/5000 var: \",sess_result[0])\n",
     "\n"
    ]
   },
