Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
@@ -291,7 +291,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T23:25:53.277Z"
+     "start_time": "2019-04-10T23:26:02.449Z"
     },
     "scrolled": false
    },
@@ -300,17 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter:  0  current batch:  0 /5000 var:  0.019430991\n",
-      "Iter:  0  current batch:  10 /5000 var:  6760.615\n",
-      "Iter:  0  current batch:  20 /5000 var:  0.022168415\n",
-      "Iter:  0  current batch:  30 /5000 var:  5601.9473\n",
-      "Iter:  0  current batch:  40 /5000 var:  0.017676678\n",
-      "Iter:  0  current batch:  50 /5000 var:  6191.532\n",
-      "Iter:  0  current batch:  60 /5000 var:  0.01707011\n",
-      "Iter:  0  current batch:  70 /5000 var:  6244.1245\n",
-      "Iter:  0  current batch:  80 /5000 var:  0.022445697\n",
-      "Iter:  0  current batch:  90 /5000 var:  5870.528\n",
-      "Iter:  0  current batch:  100 /5000 var:  0.022561483\n"
+      "Iter:  0  current batch:  1410 /5000 var:  0.031620752\r"
      ]
     }
    ],
