--- a/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:24:48.674215Z",
-     "start_time": "2019-04-10T23:24:48.246668Z"
+     "end_time": "2019-04-10T23:31:23.857793Z",
+     "start_time": "2019-04-10T23:31:23.316407Z"
     }
    },
    "outputs": [],
@@ -275,6 +275,9 @@
     "l2 = PCA_Layer(128,2)\n",
     "\n",
     "x = tf.placeholder(tf.float32,[mini_batch_size,784])\n",
+    "full_data = tf.placeholder(tf.float32,[None,784])\n",
+    "flayer1,_ = l1.feedforward_nonlinear(full_data)\n",
+    "flayer2,_ = l2.feedforward_linear(flayer1)\n",
     "\n",
     "layer1,l1l = l1.feedforward_nonlinear(x)\n",
     "layer2,l2l = l2.feedforward_linear(layer1)\n",
@@ -291,23 +294,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T23:26:02.449Z"
+     "start_time": "2019-04-10T23:31:28.880Z"
     },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iter:  0  current batch:  3170 /5000 var:  0.045599166\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start\n",
     "# sess = tf.InteractiveSession()\n",
-    "# sess.run(tf.global_variables_initializer())\n",
+    "sess.run(tf.global_variables_initializer())\n",
     "val_data_copy = np.copy(val_data)\n",
     "\n",
     "for iter in range(1):\n",
@@ -317,8 +312,7 @@
     "        \n",
     "        current_batch  = val_data_copy[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        sess_result    = sess.run([loss,grad_update],feed_dict={x:current_batch})\n",
-    "        print('Iter: ',iter,' current batch: ',current_batch_index,\"/5000 var: \",sess_result[0],end='\\r')\n",
-    "\n"
+    "        print('Iter: ',iter,' current batch: ',current_batch_index,\"/5000 var: \",sess_result[0],end='\\r')\n"
    ]
   },
   {
