Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST (Failed).ipynb
@@ -298,7 +298,15 @@
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter:  0  current batch:  110 /5000 var:  705.8222713\r"
+     ]
+    }
+   ],
    "source": [
     "# start\n",
     "# sess = tf.InteractiveSession()\n",
