Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T23:42:57.285Z"
+     "end_time": "2019-04-10T23:43:19.697004Z",
+     "start_time": "2019-04-10T23:43:19.593585Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# import lib\n",
     "import numpy as np\n",
@@ -32,6 +46,12 @@
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
+    "# Import datasets, classifiers and performance metrics\n",
+    "from sklearn import datasets, svm, metrics\n",
+    "\n",
+    "# The digits dataset\n",
+    "digits = datasets.load_digits()\n",
+    "\n",
     "def _sym_decorrelation(W):\n",
     "    \"\"\" Symmetric decorrelation\n",
     "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -44,17 +64,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T23:43:52.913529Z",
+     "start_time": "2019-04-10T23:43:52.908569Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1797, 8, 8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits.images.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T23:44:20.584147Z",
+     "start_time": "2019-04-10T23:44:20.578195Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for x in range(10):\n",
+    "    print( (digits.target==))"
+   ]
   },
   {
    "cell_type": "code",
