Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -34,6 +34,7 @@
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "import plotly.graph_objs as go\n",
     "init_notebook_mode(connected=True)\n",
+    "\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.decomposition import PCA,KernelPCA\n",
     "np.random.seed(23)\n",
@@ -84,33 +85,39 @@
     }
    ],
    "source": [
-    "digits.images.shape"
+    "# traditional pca \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:44:20.584147Z",
-     "start_time": "2019-04-10T23:44:20.578195Z"
+     "end_time": "2019-04-10T23:44:36.131190Z",
+     "start_time": "2019-04-10T23:44:36.125741Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "182"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "178\n",
+      "182\n",
+      "177\n",
+      "183\n",
+      "181\n",
+      "182\n",
+      "181\n",
+      "179\n",
+      "174\n",
+      "180\n"
+     ]
     }
    ],
    "source": [
     "for x in range(10):\n",
-    "    print( (digits.target==))"
+    "    print( (digits.target==x).sum())"
    ]
   },
   {
