Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -50,9 +50,6 @@
     "# Import datasets, classifiers and performance metrics\n",
     "from sklearn import datasets, svm, metrics\n",
     "\n",
-    "# The digits dataset\n",
-    "digits = datasets.load_digits()\n",
-    "\n",
     "def _sym_decorrelation(W):\n",
     "    \"\"\" Symmetric decorrelation\n",
     "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -61,6 +58,43 @@
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
     "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T23:46:31.124567Z",
+     "start_time": "2019-04-10T23:46:31.045206Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(115008,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning:\n",
+      "\n",
+      "Non-string object detected for the array ordering. Please pass in 'C', 'F', 'A', or 'K' instead\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the data \n",
+    "digits = datasets.load_digits()\n",
+    "X = digits.images.flatten()\n",
+    "Y = digits.target\n",
+    "\n",
+    "print(X.shape)\n"
    ]
   },
   {
@@ -85,7 +119,8 @@
     }
    ],
    "source": [
-    "# traditional pca \n"
+    "# traditional pca \n",
+    "pca_data = PCA(2).fit_transform()"
    ]
   },
   {
