Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:46:31.124567Z",
-     "start_time": "2019-04-10T23:46:31.045206Z"
+     "end_time": "2019-04-10T23:47:44.166324Z",
+     "start_time": "2019-04-10T23:47:44.081978Z"
     }
    },
    "outputs": [
@@ -74,27 +74,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(115008,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning:\n",
-      "\n",
-      "Non-string object detected for the array ordering. Please pass in 'C', 'F', 'A', or 'K' instead\n",
-      "\n"
+      "(1797, 64) 16.0 0.0\n"
      ]
     }
    ],
    "source": [
     "# get the data \n",
     "digits = datasets.load_digits()\n",
-    "X = digits.images.flatten()\n",
+    "X = digits.images.reshape((digits.images.shape[0],-1))\n",
     "Y = digits.target\n",
     "\n",
-    "print(X.shape)\n"
+    "print(X.shape,X.max(),X.min())\n"
    ]
   },
   {
